--- a/thisistheapp/trefle/ParseData.ipynb
+++ b/thisistheapp/trefle/ParseData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +88,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'images' in plant_data[123107].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'images' in plant_data[183038].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "183038\n",
+      "dict_keys(['scientific_name', 'native_status', 'main_species', 'id', 'genus', 'family_common_name', 'duration', 'common_name'])\n",
+      "Use Placeholder\n",
+      "123107\n",
+      "dict_keys(['scientific_name', 'order', 'native_status', 'main_species', 'images', 'id', 'genus', 'family_common_name', 'family', 'duration', 'division', 'common_name', 'class'])\n",
+      "Exists\n",
+      "151390\n",
+      "dict_keys(['varieties', 'sub_species', 'scientific_name', 'order', 'native_status', 'main_species', 'images', 'id', 'genus', 'family_common_name', 'family', 'duration', 'division', 'common_name', 'class'])\n",
+      "Exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in relevant_keys:\n",
+    "    print(k)\n",
+    "    print(plant_data[k].keys())\n",
+    "    if('images' not in plant_data[k].keys()):\n",
+    "        print('Use Placeholder')\n",
+    "    else:\n",
+    "        print('Exists')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this_map_key', 'this_no_pop', 'need_a_third']\n",
+      "this_no_pop\n",
+      "need_a_third\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = ['this_map_key', 'this_no_pop', 'need_a_third']\n",
+    "print(l)\n",
+    "for i in range(len(l)):\n",
+    "    if 'map' not in l[i]:\n",
+    "        print(l[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -110,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
